2014-02-18  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/devnag.c (dnproc): Bug fix: More strcpy() => memmove()
	when src and dest overlap.
	Reported by Richard Koch <koch@math.uoregon.edu>.

2014-02-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/devnag.c (dnproc): Bug fix: Replace strcpy() by memmove()
	when src and dest overlap.
	Reported by Richard Koch <koch@math.uoregon.edu>.

2013-10-01  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Drop AC_HEADER_STDC, fail for missing strstr().
	* Makefile.am: Adapted.

2013-03-15  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/Makefile.am (removed): Merged into Makefile.am.
	* tests/devnag.test (new): Shell script for a test case.
	* tests/*.{dn,tex} (new): Test input and expected output.
	* Makefile.am, configure.ac: Adapted.

2012-12-17  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Use KPSE_BASIC to enable silent rules.

2012-05-16  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* src/devnag.c: Use binary mode for output files.
	From Akira Kakuto <kakuto@fuk.kindai.ac.jp> (W32TeX).

2010-12-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: Version 2.15 (since 2008-07-03).

2010-05-22  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* src/devnag.c: cast arguments in order to avoid compiler warnings.

2009-08-21  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid maximal compiler warnings.
	* src/devnag.c: Constify various global strings and string args.
	Drop global variable nbsub.

2009-06-19  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac, Makefile.am, src/Makefile.am: enable compiler
	warnings.

2009-05-27  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Adapt to TL2009 build system.

2008-01-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.in (removed): moved ...
	* configure.ac (new): ... to here and adapted for TeX Live:
	axiliary files in ../../build-aux, added AM_MAINTAINER_MODE,
	modernized Autoconf idioms.

2008-01-31  Peter Breitenlohner  <peb@mppmu.mpg.de>
